fix size on mobile screen

--- a/src/Components/Carousel/CarouselIndex.css
+++ b/src/Components/Carousel/CarouselIndex.css
@@ -18,20 +18,13 @@
 }
 
 @media screen and (max-width: 768px) {
-    .details {
-        max-width: 100%;
-        max-height: 100%;
+    .carousel-image {
+        max-width: 50vw;
     }
-
-    .glideDiv {
-        width: 100vw;
-    }
-
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .details {
-        width: 75vw;
-        height: 100vh;
+    .carousel-image {
+        max-width: 75vw;
     }
 }
